# mp3_player

./: .gitignore  Cargo.toml  Pipfile  dark.json  darkVars.json  light.json  main.py  rc.py  resources.qrc  stylesheet.qss
resources/: resources.gresource  resources.xml
src/: main.rs  resources.gresource  resources.xml  style.css
src/controls/: mod.rs
src/data/: style.css
src/play_button/: imp.rs
src/shuffle_button/: imp.rs  mod.rs
utils/: __init__.py  color_parser.py  palettes.py
widgets/: __init__.py  main_window.py  settings_window.py
