[package]
name = "mp3_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.16.7"
dotenv = "0.15.0"
gdk-pixbuf = "0.16.7"
gio = "0.16.7"
gtk = { version = "0.5.4", package = "gtk4", features = ["v4_6"] }
librsvg = { git="https://gitlab.gnome.org/GNOME/librsvg" }
